[gd_scene load_steps=3 format=3 uid="uid://dwk3vh8pqmw7t"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1_game"]
[ext_resource type="Script" path="res://scripts/GameCamera.gd" id="2_camera"]

[node name="Game" type="Node2D" groups=["game"]]
script = ExtResource("1_game")

[node name="Camera2D" type="Camera2D" parent="." groups=["camera"]]
position = Vector2(640, 360)
script = ExtResource("2_camera")

[node name="RoomContainer" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBar" type="Panel" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="CharacterLabel" type="Label" parent="UI/HUD/TopBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Character: Ant"

[node name="ItemsLabel" type="Label" parent="UI/HUD/TopBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -15.0
offset_right = -20.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Items: 0/7"
horizontal_alignment = 2

[node name="BottomBar" type="Panel" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="RoomLabel" type="Label" parent="UI/HUD/BottomBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -15.0
offset_right = 100.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Kitchen"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="UI/HUD/BottomBar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -70.0
offset_right = 180.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="MenuButton" type="Button" parent="UI/HUD/BottomBar/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Menu"

[node name="AbilityButton" type="Button" parent="UI/HUD/BottomBar/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Use Ability"

[node name="NextRoomButton" type="Button" parent="UI/HUD/BottomBar/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next Room"

[connection signal="pressed" from="UI/HUD/BottomBar/ButtonContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="UI/HUD/BottomBar/ButtonContainer/AbilityButton" to="." method="_on_ability_button_pressed"]
[connection signal="pressed" from="UI/HUD/BottomBar/ButtonContainer/NextRoomButton" to="." method="_on_next_room_button_pressed"]
